--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -6,3 +6,13 @@ rustflags = ["-C", "link-arg=-nostartfiles"]
 
 [target.'cfg(target_os = "windows")']
 rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]
+
+[target.'cfg(target_os = "none")']
+runner = "bootimage runner"
+
+[build]
+target = "x86_64-rwos.json"
+
+[unstable]
+build-std-features = ["compiler-builtins-mem"]
+build-std = ["core", "compiler_builtins"]
