--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 bootloader = "0.9.23"
+lazy_static = { version = "1.0", features = ["spin_no_std"] }
+spin = "0.5.2"
+volatile = "0.2.6"
