--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,19 @@ edition = "2021"
 [dependencies]
 bootloader = "0.9.23"
 lazy_static = { version = "1.0", features = ["spin_no_std"] }
+uart_16550 = "0.2.0"
 spin = "0.5.2"
+x86_64 = "0.14.2"
 volatile = "0.2.6"
+
+[package.metadata.bootimage]
+test-args = [
+  "-device",
+  "isa-debug-exit,iobase=0xf4,iosize=0x04",
+  "-serial",
+  "stdio",
+  "-display",
+  "none",
+]
+test-success-exit-code = 33 # (0x10 << 1) | 1
+test-timeout = 300 # (in seconds)
